WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148480
Web Inspector: REGRESSION(
r188965
): BackendDispatcher loses request ids when called re-entrantly
https://bugs.webkit.org/show_bug.cgi?id=148480
Summary
Web Inspector: REGRESSION(r188965): BackendDispatcher loses request ids when ...
Blaze Burg
Reported
2015-08-26 09:49:20 PDT
I added an assertion that m_currentRequestId is Nullopt when dispatch() is called, but this should not hold if dispatching a backend command while debugger is paused. I will remove the assertion and add proper scoping for all dispatch() branches. This caused inspector/dom-debugger/node-removed.html to crash reliably, rather than flakily due to some other JSC bug.
Attachments
Proposed Fix
(7.18 KB, patch)
2015-08-26 09:55 PDT
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-08-26 09:51:27 PDT
<
rdar://problem/22438652
>
Blaze Burg
Comment 2
2015-08-26 09:55:17 PDT
Created
attachment 259960
[details]
Proposed Fix
Joseph Pecoraro
Comment 3
2015-08-26 11:03:23 PDT
Comment on
attachment 259960
[details]
Proposed Fix r=me
WebKit Commit Bot
Comment 4
2015-08-26 11:53:52 PDT
Comment on
attachment 259960
[details]
Proposed Fix Clearing flags on attachment: 259960 Committed
r188976
: <
http://trac.webkit.org/changeset/188976
>
WebKit Commit Bot
Comment 5
2015-08-26 11:53:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug