Web Inspector: REGRESSION(r188965): BackendDispatcher loses request ids when called re-entrantly https://bugs.webkit.org/show_bug.cgi?id=148480

Reviewed by Joseph Pecoraro.

I added an assertion that m_currentRequestId is Nullopt when dispatch() is called, but this should
not hold if dispatching a backend command while debugger is paused. I will remove the assertion
and add proper scoping for all dispatch() branches.

No new tests, this wrong assert caused inspector/dom-debugger/node-removed.html to crash reliably.

* inspector/InspectorBackendDispatcher.cpp:
(Inspector::BackendDispatcher::dispatch): Cover each exit with an appropriate TemporaryChange scope.


Canonical link: https://commits.webkit.org/166580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188976 268f45cc-cd09-0410-ab3c-d52691b4dbfc